[gd_scene load_steps=12 format=3 uid="uid://d3v1gd3x11yss"]

[ext_resource type="PackedScene" uid="uid://707nifbcq1se" path="res://Scenes/main_character.tscn" id="1_4r054"]
[ext_resource type="Script" path="res://FEESH.gd" id="1_7nc4i"]
[ext_resource type="Texture2D" uid="uid://54eow8uh1lqb" path="res://BackgroundAssets/Underwater Pack/Afternoon/Underwater_Afternoon_10.jpg" id="1_tvujx"]
[ext_resource type="PackedScene" uid="uid://dnc6gtuwi4ulj" path="res://Menus/PauseMenu/pause_menu.tscn" id="5_keytt"]
[ext_resource type="PackedScene" uid="uid://m6fhq53jkal" path="res://hud.tscn" id="6_3astr"]
[ext_resource type="Texture2D" uid="uid://bwthhwe2xakj3" path="res://BackgroundAssets/boarder.png" id="12_x6ak8"]

[sub_resource type="Curve2D" id="Curve2D_vlemf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -594, -365, 0, 0, 0, 0, 602, -363, 0, 0, 0, 0, 598, 347, 0, 0, 0, 0, -599, 340, 0, 0, 0, 0, -595, -363)
}
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbdfc"]
size = Vector2(22, 1489)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wi1e"]
size = Vector2(2805.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8dfb"]
size = Vector2(1488, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o76es"]
size = Vector2(2800, 19.625)

[node name="Game" type="Node2D"]
script = ExtResource("1_7nc4i")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -3.0
offset_top = -3.0
offset_right = 3876.0
offset_bottom = 2067.0
texture = ExtResource("1_tvujx")

[node name="MainCharacter" parent="." instance=ExtResource("1_4r054")]
unique_name_in_owner = true
position = Vector2(1482, 833)

[node name="Path2D" type="Path2D" parent="MainCharacter"]
position = Vector2(-10.6362, 3.23882)
scale = Vector2(1.09076, 1.13764)
curve = SubResource("Curve2D_vlemf")

[node name="PathFollow2D" type="PathFollow2D" parent="MainCharacter/Path2D"]
unique_name_in_owner = true
position = Vector2(-594, -365)
rotation = 0.00167224

[node name="Boarder" type="Sprite2D" parent="."]
top_level = true
light_mask = 1023
visibility_layer = 1023
position = Vector2(1939.5, 1027.5)
scale = Vector2(1.49115, 1.43426)
texture = ExtResource("12_x6ak8")

[node name="ColorRect2" type="ColorRect" parent="."]
top_level = true
offset_left = 145.0
offset_top = -498.0
offset_right = 3375.0
offset_bottom = 279.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
top_level = true
offset_left = -823.0
offset_top = -492.0
offset_right = 544.0
offset_bottom = 2069.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
top_level = true
offset_left = 3363.0
offset_top = -496.0
offset_right = 4496.0
offset_bottom = 1817.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
top_level = true
offset_left = -713.0
offset_top = 1785.0
offset_right = 4489.0
offset_bottom = 2531.0
color = Color(0, 0, 0, 1)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(192, 619.5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(377, 408)
shape = SubResource("RectangleShape2D_kbdfc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1744.25, -306.5)
shape = SubResource("RectangleShape2D_1wi1e")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3122, 405.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_f8dfb")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1757, 1128.69)
shape = SubResource("RectangleShape2D_o76es")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("5_keytt")]
unique_name_in_owner = true
visible = false
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HUD" parent="." instance=ExtResource("6_3astr")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
